# Enigma

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.c
constans/: barrels.c  barrels.h  defines.h  functions.c  functions.h  structures.h
include/: core.h  defines.h  export.h  globals.h  imports.h  rotors.h  structures.h  utils.h
src/: barrels.c  core.c  export.c  functions.c  globals.c  imports.c  main.c  rotors.c  utils.c
